--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,6 @@
     <ul class="gallery">
       <!-- Список <li> с карточками изображений -->
     </ul>
-    <button class="btn" hidden>Load more</button>
+    <!-- <button class="btn" hidden>Load more</button> -->
   </body>
 </html>
